# docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/primary-username/{owner}": {
+        "/api/primary-username/{owner}": {
             "get": {
                 "description": "Returns primary username by owner",
                 "consumes": [
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/usernames": {
+        "/api/usernames": {
             "get": {
                 "description": "Returns paginated list of all registered usernames with sorting by timestamp",
                 "consumes": [
@@ -117,7 +117,7 @@
                 }
             }
         },
-        "/usernames/owner/{owner}": {
+        "/api/usernames/owner/{owner}": {
             "get": {
                 "description": "Returns paginated list of registered usernames by owner with sorting by timestamp",
                 "consumes": [
@@ -189,7 +189,7 @@
                 }
             }
         },
-        "/usernames/{username}": {
+        "/api/usernames/{username}": {
             "get": {
                 "description": "Returns username record by username",
                 "consumes": [
